kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/hello"
        backend:
          service:
            name: demo-app
            port:
              number: 8085
